# roll_bot

./: .bazelrc  .gitignore  .gitmodules  AGENTS.md  BUILD  CMakeLists.txt  MODULE.bazel  bot.cpp  bot.h  bot_setup.cc  bot_setup.hh  calculator.cc  calculator.hh  commands.cc  commands.hh  config.cc  config.hh  config.json  default.nix  dupa.html  rpn_test.cc  sort.hh  tokens.hh  tokens_test.cpp  utils.hh
cli/: BUILD  cli.cc
core/: BUILD  bot_io.hh
cthulhu/: BUILD  CMakeLists.txt  character_sheet.cc  character_sheet.hh  make_characters.cc  test.cc  user_input.cc  user_input.hh  utils.hh
cthulhu/test_repo/: Ansh_Gandhi.json  August_Moore.json  Example.json  Insp_Oliver.json  Temmie.json  Theodore_Moore.json
discord/: BUILD  discord_bot.cc  discord_bot.hh
sheet_render/: BUILD  DESIGN.md  __init__.py  render.py  render_test.py  sheet_render_cli.py  template.j2
tree/: CMakeLists.txt  a.out  bot.cpp  calculator.hh  commands.cc  commands.hh  config.cc  config.hh  config.json  folder  main.cc  rpn.cc  rpn.hh  rpn_test.cc  test.cc  tokens.cc  tokens.hh  tokens_test.cpp
tree/cthulhu/: CMakeLists.txt  character_sheet.cc  character_sheet.hh  main.cc  test.cc  user_input.cc  user_input.hh  utils.hh
